--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "ajv": "^6.12.6",
     "ajv-formats-draft2019": "^1.6.1",
     "ajv-keywords": "^3.5.2",
+    "date-fns": "^4.1.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
