--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@mui/x-date-pickers": "^8.26.0",
     "@supabase/supabase-js": "^2.56.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +22,7 @@
     "date-fns": "^4.1.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.552.0",
+    "material-react-table": "^3.2.1",
     "motion": "^12.23.24",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
