--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/cormorant-garamond": "^0.4.1",
+    "@expo-google-fonts/ibm-plex-mono": "^0.4.1",
     "@profitpath/shared": "*",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.6.0",
@@ -18,6 +20,7 @@
     "@supabase/supabase-js": "^2.93.3",
     "date-fns": "^4.1.0",
     "expo": "~54.0.32",
+    "expo-font": "~14.0.11",
     "expo-haptics": "^15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
